--- a/index.html
+++ b/index.html
@@ -17,6 +17,23 @@
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
+    <header>
+        <a href="index.html">
+            <img src="./assets/images/logo.webp" id="img-logo" alt=" Logo CelesTial, moon and start" loading="lazy">
+        </a>
+        <!--Create the nav toggle-->
+        <input type="checkbox" id="nav-toglle" name="nav-toglle">
+        <label for="nav-toglle" class="nav-burger" aria-label="burger menu dropdown"><i
+                class="fa-solid fa-bars"></i></label>
+        <nav>
+            <ul id="menu">
+                <li><a href="index.html" class="page-active">Home</a></li>
+                <li><a href="services.html">Services</a></li>
+                <li><a href="member.html">Member</a></li>
+            </ul>
+        </nav>
+    </header>
+<body>
     
 </body>
 </html>
