Create footer section

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -16,6 +17,7 @@
     <!--Stylesheet-->
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
+
 <body>
     <header>
         <a href="index.html">
@@ -33,7 +35,34 @@
             </ul>
         </nav>
     </header>
-<body>
-    
+    <main>
+
+    </main>
+<!--Footer with contacts available-->
+<footer>
+    <ul id="footer-social-media-contact">
+        <li><a href="https://www.facebook.com/" target="_blank" rel="noopener"
+                aria-label="Visit my Facebook page (opens new tab)"><i class="fa-brands fa-facebook-f"></i></a>
+        </li>
+        <li><a href="https://www.instagram.com/" target="_blank" rel="noopener"
+                aria-label="Visit my Instagram page (opens new tab)"><i class="fa-brands fa-instagram"></i></a>
+        </li>
+        <li><a href="https://www.youtube.com/" target="_blank" rel="noopener"
+                aria-label="Visit my Youtube page (opens new tab)"><i class="fa-brands fa-youtube"></i></a>
+        </li>
+        <li><a href="https://www.twitter.com/" target="_blank" rel="noopener"
+                aria-label="Visit our Twitter page (opens new tab)"><i class="fa-brands fa-twitter"></i></a>
+        </li>
+    </ul>
+    <div class="footer-social-media-contact__email">
+        <span>Email:</span>
+        <a href="" rel="noopener">celestial@gmail.com</a>
+        <span><i class="fa-regular fa-copyright"></i>Copyright Miriam Mccay
+            2024</span>
+    </div>
+</footer>
+<!--Font Awesome kit-->
+<script src="https://kit.fontawesome.com/594d12a65e.js" crossorigin="anonymous"></script>
 </body>
+
 </html>
