Create hero-image section

--- a/index.html
+++ b/index.html
@@ -36,33 +36,45 @@
         </nav>
     </header>
     <main>
-
+        <!--Create a cover text to the hero image-->
+        <section id="hero-image">
+            <h1>Welcome to the Magic!</h1>
+            <div id="hero-image__cover-text-title__text">
+                <h4><strong>Trust in me YOUR</strong></h4>
+                <h5>Personal Life!</h5>
+            </div>
+            <div id="hero-image__button">
+                <a href="member.html" aria-label=" Magic Icon go to My services page" class="button">
+                    <i class="fa-solid fa-wand-sparkles"></i>My Services
+                </a>
+            </div>
+        </section>
     </main>
-<!--Footer with contacts available-->
-<footer>
-    <ul id="footer-social-media-contact">
-        <li><a href="https://www.facebook.com/" target="_blank" rel="noopener"
-                aria-label="Visit my Facebook page (opens new tab)"><i class="fa-brands fa-facebook-f"></i></a>
-        </li>
-        <li><a href="https://www.instagram.com/" target="_blank" rel="noopener"
-                aria-label="Visit my Instagram page (opens new tab)"><i class="fa-brands fa-instagram"></i></a>
-        </li>
-        <li><a href="https://www.youtube.com/" target="_blank" rel="noopener"
-                aria-label="Visit my Youtube page (opens new tab)"><i class="fa-brands fa-youtube"></i></a>
-        </li>
-        <li><a href="https://www.twitter.com/" target="_blank" rel="noopener"
-                aria-label="Visit our Twitter page (opens new tab)"><i class="fa-brands fa-twitter"></i></a>
-        </li>
-    </ul>
-    <div class="footer-social-media-contact__email">
-        <span>Email:</span>
-        <a href="" rel="noopener">celestial@gmail.com</a>
-        <span><i class="fa-regular fa-copyright"></i>Copyright Miriam Mccay
-            2024</span>
-    </div>
-</footer>
-<!--Font Awesome kit-->
-<script src="https://kit.fontawesome.com/594d12a65e.js" crossorigin="anonymous"></script>
+    <!--Footer with contacts available-->
+    <footer>
+        <ul id="footer-social-media-contact">
+            <li><a href="https://www.facebook.com/" target="_blank" rel="noopener"
+                    aria-label="Visit my Facebook page (opens new tab)"><i class="fa-brands fa-facebook-f"></i></a>
+            </li>
+            <li><a href="https://www.instagram.com/" target="_blank" rel="noopener"
+                    aria-label="Visit my Instagram page (opens new tab)"><i class="fa-brands fa-instagram"></i></a>
+            </li>
+            <li><a href="https://www.youtube.com/" target="_blank" rel="noopener"
+                    aria-label="Visit my Youtube page (opens new tab)"><i class="fa-brands fa-youtube"></i></a>
+            </li>
+            <li><a href="https://www.twitter.com/" target="_blank" rel="noopener"
+                    aria-label="Visit our Twitter page (opens new tab)"><i class="fa-brands fa-twitter"></i></a>
+            </li>
+        </ul>
+        <div class="footer-social-media-contact__email">
+            <span>Email:</span>
+            <a href="" rel="noopener">celestial@gmail.com</a>
+            <span><i class="fa-regular fa-copyright"></i>Copyright Miriam Mccay
+                2024</span>
+        </div>
+    </footer>
+    <!--Font Awesome kit-->
+    <script src="https://kit.fontawesome.com/594d12a65e.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
