Completed about section to the main on the index.page

--- a/index.html
+++ b/index.html
@@ -49,6 +49,38 @@
                 </a>
             </div>
         </section>
+        <!--Create here the main context about Celeste-->
+        <section id="about-text">
+            <h3 class="heading-container">About Me</h3>
+            <div id="text1">
+                <div class="text-paraghp">
+                    <p>Hi, I'm Celeste from Celestial World!</p>
+                    <p>I am an astrology specialist with over 15 years of experience in spirituality, zodiac, tarot
+                        reading,
+                        crystal ball gazing, and more. I come from a long line of Romani gypsies, inheriting the
+                        mystical
+                        knowledge and wisdom of my ancestors.</p>
+                </div>
+                <div>
+                    <img class="about-text__container__image other-images" src="./assets/images/celeste-profile.webp"
+                        alt="Picture profile Celeste playing holding in her hands a pink cristal ball" loading="lazy">
+                </div>
+                <br>
+                <br>
+            </div>
+            <div id="text2">
+                <div class="text-paraghp">
+                    <p>Throughout my journey, I have delved deep into the realms of love, finance, and career, offering
+                        personalized and unique services tailored to each individual's needs. My mission is to guide and
+                        empower others on their spiritual path, helping them unlock the mysteries of the universe and
+                        navigate life's challenges with clarity and confidence.</p>
+                </div>
+                <div>
+                    <img class="about-text__container__image other-images" src="./assets/images/celeste-profile2.webp"
+                        alt=" Profile Picture Celeste playing cards" loading="lazy">
+                </div>
+            </div>
+        </section>
     </main>
     <!--Footer with contacts available-->
     <footer>
