Fix layout responsive screen 992px up for about section

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                         knowledge and wisdom of my ancestors.</p>
                 </div>
                 <div>
-                    <img class="about-text__container__image other-images" src="./assets/images/celeste-profile.webp"
+                    <img class="about-text__container__image other-images" src="./assets/images/celeste-profile.jpg"
                         alt="Picture profile Celeste playing holding in her hands a pink cristal ball" loading="lazy">
                 </div>
                 <br>
@@ -76,7 +76,7 @@
                         navigate life's challenges with clarity and confidence.</p>
                 </div>
                 <div>
-                    <img class="about-text__container__image other-images" src="./assets/images/celeste-profile2.webp"
+                    <img class="about-text__container__image other-images" src="./assets/images/celeste-profile2.jpg"
                         alt=" Profile Picture Celeste playing cards" loading="lazy">
                 </div>
             </div>
