Created the services page and linked the 'My Services' button to it

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <h5>Personal Life!</h5>
             </div>
             <div id="hero-image__button">
-                <a href="member.html" aria-label=" Magic Icon go to My services page" class="button">
+                <a href="services.html" aria-label=" Magic Icon go to My services page" class="button">
                     <i class="fa-solid fa-wand-sparkles"></i>My Services
                 </a>
             </div>
