Introduction to the cards services

--- a/services.html
+++ b/services.html
@@ -36,6 +36,21 @@
         </nav>
     </header>
     <main>
+        <!--Structure of the services page with the cards with each serivice-->
+        <section id="services-container">
+            <h2 class="heading-container" aria-label="Magic Simbol for the celeste services"><i
+                    class="fa-solid fa-wand-sparkles"></i>Services</h2>
+            <div id="text1">
+                <div class="text-paraghp">
+                    <p>Welcome to our cosmic sanctuary!</p>
+                    <p>Explore our range of mystical services designed to illuminate your path and empower your
+                        journey.
+                    </p>
+                    <p>Step into the realm of the unknown and discover the magic that awaits you.</p>
+                </div>
+            </div>
+
+    </main>
         <!--Footer with contacts available-->
         <footer>
             <ul id="footer-social-media-contact">
