Add tatot-reading card

--- a/services.html
+++ b/services.html
@@ -49,33 +49,56 @@
                     <p>Step into the realm of the unknown and discover the magic that awaits you.</p>
                 </div>
             </div>
-
+            <div id="services">
+                <div id="tarot">
+                    <div class="card">
+                        <img src="./assets/images/tarot-image.webp" alt="Tarot Cards Image" loading="lazy">
+                        <div class="intro">
+                            <h3>Tarot Reading</h3>
+                            <div>
+                                <p>Explore the ancient art of Tarot Reading </p>
+                                <p>to uncover personalized insights into</p>
+                                <p> Your life's journey.</p>
+                                <p>Uncover personalized insights into your life's journey.</p>
+                                <p>Each session offers guidance and understanding,</p>
+                                <p>about your path forward.</p>
+                                <br>
+                                <br>
+                                <p class="price">€35 per session</p>
+                                <a href="member.html" class="link-button">
+                                    <p><strong>Ready to unlock the secrets of the cards?</strong></p>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
     </main>
-        <!--Footer with contacts available-->
-        <footer>
-            <ul id="footer-social-media-contact">
-                <li><a href="https://www.facebook.com/" target="_blank" rel="noopener"
-                        aria-label="Visit my Facebook page (opens new tab)"><i class="fa-brands fa-facebook-f"></i></a>
-                </li>
-                <li><a href="https://www.instagram.com/" target="_blank" rel="noopener"
-                        aria-label="Visit my Instagram page (opens new tab)"><i class="fa-brands fa-instagram"></i></a>
-                </li>
-                <li><a href="https://www.youtube.com/" target="_blank" rel="noopener"
-                        aria-label="Visit my Youtube page (opens new tab)"><i class="fa-brands fa-youtube"></i></a>
-                </li>
-                <li><a href="https://www.twitter.com/" target="_blank" rel="noopener"
-                        aria-label="Visit our Twitter page (opens new tab)"><i class="fa-brands fa-twitter"></i></a>
-                </li>
-            </ul>
-            <div class="footer-social-media-contact__email">
-                <span>Email:</span>
-                <a href="" rel="noopener">celestial@gmail.com</a>
-                <span><i class="fa-regular fa-copyright"></i>Copyright Miriam Mccay
-                    2024</span>
-            </div>
-        </footer>
-        <!--Font Awesome kit-->
-        <script src="https://kit.fontawesome.com/594d12a65e.js" crossorigin="anonymous"></script>
+    <!--Footer with contacts available-->
+    <footer>
+        <ul id="footer-social-media-contact">
+            <li><a href="https://www.facebook.com/" target="_blank" rel="noopener"
+                    aria-label="Visit my Facebook page (opens new tab)"><i class="fa-brands fa-facebook-f"></i></a>
+            </li>
+            <li><a href="https://www.instagram.com/" target="_blank" rel="noopener"
+                    aria-label="Visit my Instagram page (opens new tab)"><i class="fa-brands fa-instagram"></i></a>
+            </li>
+            <li><a href="https://www.youtube.com/" target="_blank" rel="noopener"
+                    aria-label="Visit my Youtube page (opens new tab)"><i class="fa-brands fa-youtube"></i></a>
+            </li>
+            <li><a href="https://www.twitter.com/" target="_blank" rel="noopener"
+                    aria-label="Visit our Twitter page (opens new tab)"><i class="fa-brands fa-twitter"></i></a>
+            </li>
+        </ul>
+        <div class="footer-social-media-contact__email">
+            <span>Email:</span>
+            <a href="" rel="noopener">celestial@gmail.com</a>
+            <span><i class="fa-regular fa-copyright"></i>Copyright Miriam Mccay
+                2024</span>
+        </div>
+    </footer>
+    <!--Font Awesome kit-->
+    <script src="https://kit.fontawesome.com/594d12a65e.js" crossorigin="anonymous"></script>
 </body>
+
 </html>
 </main>
