Add Palm reading card

--- a/services.html
+++ b/services.html
@@ -72,6 +72,25 @@
                         </div>
                     </div>
                 </div>
+                <div id="palm-reading">
+                    <div class="card">
+                        <img src="./assets/images/palm-reading.webp" alt="Palm Reading Image">
+                        <div class="intro">
+                            <h3>Palm Reading</h3>
+                            <p>Delve into the ancient practice of Palm Reading to uncover personalized insights
+                                about your life.</p>
+                            <p>Each session deciphers the unique patterns and lines on your palms, offering guidance
+                                on various aspects including personality traits, relationships, and career paths.
+                            </p>
+                            <p>Gain clarity and understanding as you explore the secrets hidden within your hands.</p>
+                            <br>
+                            <p class="price">€45 per session</p>
+                            <a href="member.html" class="link-button">
+                                <p><strong> Ready to discover what your palms reveal?</strong></p>
+                            </a>
+                        </div>
+                    </div>
+                </div>
     </main>
     <!--Footer with contacts available-->
     <footer>
