Add Cristal Ball card

--- a/services.html
+++ b/services.html
@@ -91,6 +91,27 @@
                         </div>
                     </div>
                 </div>
+                <div id="cristal-ball">
+                    <div class="card">
+                        <img src="./assets/images/cristal-ball.webp" alt="Hands on the top of the Cristall Ball"
+                            loading="lazy">
+                        <div class="intro">
+                            <h3>Cristal Ball</h3>
+                            <p>Unlock the mysteries of your future with Crystal Ball Reading.
+                            <p>Through a personalized session, gain insights and guidance on love, career, and personal
+                                growth</p>
+                            <p>Peer into the depths of the crystal ball to reveal </p>
+                            <p>hidden truths and potential outcomes.</p>
+                            <br>
+                            <br>
+                            <br>
+                            <p class="price">€55 per session</p>
+                            <a href="member.html" class="link-button">
+                                <p><strong> Ready to explore what lies ahead?</strong></p>
+                            </a>
+                        </div>
+                    </div>
+                </div>
     </main>
     <!--Footer with contacts available-->
     <footer>
