Add Daily Horoscope card

--- a/services.html
+++ b/services.html
@@ -112,6 +112,29 @@
                         </div>
                     </div>
                 </div>
+                <div id="horoscope" >
+                    <div class="card">
+                        <img src="./assets/images/daily-horoscope.webp" alt="Creting a astral map" loading="lazy">
+                        <div class="intro">
+                            <h3>Daily Horoscope</h3>
+                            <p>Unlock your personalized cosmic forecast with our Daily Horoscope.</p>
+                            <p>Tailored to your unique astrological profile, </p>
+                            <p>each day offers insights into love,</p>
+                            <p>career, and personal well-being.</p>
+                            <p>Let the stars guide you towards clarity and empowerment. </p>
+                            <br>
+                            <br>
+                            <br>
+                            <br>
+                            <p class="price">€50 per month</p>
+                            <a href="member.html" class="link-button">
+                                <p><strong>Ready to navigate your day with cosmic wisdom?</strong></p>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <!--Footer with contacts available-->
     <footer>
