Create testimonial section - picture,starts and text

--- a/services.html
+++ b/services.html
@@ -135,6 +135,76 @@
                 </div>
             </div>
         </section>
+         <!--Create the testimonial cards strcucture inspiration:https://www.youtube.com/watch?v=00LpIJ58FZ4-->
+         <h2 class="heading-container">What My Clients Say</h2>
+         <section id="testimonial-container">
+             <div class="card-testimonial">
+                 <img class="user" src="./assets/images/client1.webp"
+                     alt=" Profile picture client of woman with short hair" loading="lazy">
+                 <h3>Miriam</h3>
+                 <div>
+                     <span title="5 stars">
+                         <i class="fa-solid fa-star"></i>
+                         <i class="fa-solid fa-star"></i>
+                         <i class="fa-solid fa-star"></i>
+                         <i class="fa-solid fa-star"></i>
+                         <i class="fa-solid fa-star"></i>
+                     </span>
+                 </div>
+                 <div class="intro">
+                     <p>" I've been getting my personalized daily horoscope from this service for months now, and it's
+                         become an essential part of my morning routine </p>
+                     <p>The insights provided are always thought-provoking and seem to resonate with what's happening in
+                         my life.</p>
+                     <p>It's like having a cosmic guide to help navigate the ups and downs of each day. Highly
+                         recommend!"</p>
+                 </div>
+             </div>
+             <div class="card-testimonial ">
+                 <img class="user" src="./assets/images/client2.webp"
+                     alt="Profile picture of a man wearing glassesand suits" loading="lazy">
+                 <h3>Paul</h3>
+                 <div>
+                     <span  title="4 stars and half">
+                         <i class="fa-solid fa-star"></i>
+                         <i class="fa-solid fa-star"></i>
+                         <i class="fa-solid fa-star"></i>
+                         <i class="fa-solid fa-star"></i>
+                         <i class="fa-regular fa-star-half-stroke"></i>
+                     </span>
+                 </div>
+                 <div class="intro">
+                     <p>" I've always been curious about Tarot readings but never tried one until now </p>
+                     <p>I must say, the experience was beyond my expectations!</p>
+                     <p>The insights I gained were incredibly accurate and provided </p>
+                     <p>much-needed clarity on some pressing life decisions.</p>
+                     <p>Thank you for such an enlightening session! "</p>
+                 </div>
+             </div>
+             <div class="card-testimonial card-center">
+                 <img class="user" src="./assets/images/client3.webp" alt="Profile picture woaman holding purse"
+                     loading="lazy">
+                 <h3>Josi</h3>
+                 <div>
+                     <span  title="4 stars">
+                         <i class="fa-solid fa-star"></i>
+                         <i class="fa-solid fa-star"></i>
+                         <i class="fa-solid fa-star"></i>
+                         <i class="fa-solid fa-star"></i>
+                     </span>
+                 </div>
+                 <div class="intro">
+                     <p>" As someone who's a bit skeptical about mystical practices, I was pleasantly surprised by my
+                         Palm
+                         Reading session.
+                     </p>
+                     <p>The reader was so knowledgeable and interpreted the lines on my palms with such precision</p>
+                     <p> I left feeling more in tune with myself and with a newfound appreciation for the wisdom that can
+                         be found in unexpected places "
+                     </p>
+                 </div>
+             </div>
+         </section>
     </main>
     <!--Footer with contacts available-->
     <footer>
@@ -164,4 +234,3 @@
 </body>
 
 </html>
-</main>
