Included opening hours and a video to location section

--- a/services.html
+++ b/services.html
@@ -220,6 +220,20 @@
                         width="250" height="190" style="border:0;" allowfullscreen="" loading="lazy"
                         referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
+                <div class="time ">
+                    <h3>Hours</h3>
+                    <ul>
+                        <li>Monday - Wednesday</li>
+                        <li>12am - 3om</li>
+                        <li>Friday - Saturday</li>
+                        <li>10am-3pm</li>
+                    </ul>
+                </div>
+                <div class="video-container">
+                    <video src="./assets/video/celeste-video.mp4" controls autoplay muted
+                        aria-describedby="description">
+                        <p id="description">Apresentation of Celeste works with candles, cards and reading hands.</p>
+                    </video>
     </main>
     <!--Footer with contacts available-->
     <footer>
