Fix bug on the layout of Testimonial card, to fit on the screen

--- a/services.html
+++ b/services.html
@@ -29,8 +29,8 @@
                 class="fa-solid fa-bars"></i></label>
         <nav>
             <ul id="menu">
-                <li><a href="index.html" class="page-active">Home</a></li>
-                <li><a href="services.html">Services</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="services.html" class="page-active">Services</a></li>
                 <li><a href="member.html">Member</a></li>
             </ul>
         </nav>
@@ -49,6 +49,7 @@
                     <p>Step into the realm of the unknown and discover the magic that awaits you.</p>
                 </div>
             </div>
+
             <div id="services">
                 <div id="tarot">
                     <div class="card">
@@ -112,7 +113,7 @@
                         </div>
                     </div>
                 </div>
-                <div id="horoscope">
+                <div id="horoscope" >
                     <div class="card">
                         <img src="./assets/images/daily-horoscope.webp" alt="Creting a astral map" loading="lazy">
                         <div class="intro">
@@ -130,11 +131,13 @@
                             <a href="member.html" class="link-button">
                                 <p><strong>Ready to navigate your day with cosmic wisdom?</strong></p>
                             </a>
+
                         </div>
                     </div>
                 </div>
             </div>
         </section>
+
         <!--Create the testimonial cards strcucture inspiration:https://www.youtube.com/watch?v=00LpIJ58FZ4-->
         <h2 class="heading-container">What My Clients Say</h2>
         <section id="testimonial-container">
@@ -165,7 +168,7 @@
                     alt="Profile picture of a man wearing glassesand suits" loading="lazy">
                 <h3>Paul</h3>
                 <div>
-                    <span title="4 stars and half">
+                    <span  title="4 stars and half">
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
@@ -186,7 +189,7 @@
                     loading="lazy">
                 <h3>Josi</h3>
                 <div>
-                    <span title="4 stars">
+                    <span  title="4 stars">
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
@@ -207,34 +210,39 @@
         </section>
         <!--Location section-->
 
-        <section id="location">
-            <h2 class="heading-container">Make me a visit!</h2>
-            <div class="location-div text-paraghp">
-                <div class="location-text">
+    <section id="location">
+        <h2 class="heading-container">Make me a visit!</h2>
+        <div class="location-div text-paraghp">
+            <div class="location-text">
                     <i class="fa-solid fa-location-dot"></i>
                     <p>1-2 Burgh Quay, Dublin 2, D02 F243</p>
-                </div>
-                <div class="iframe-container">
-                    <iframe
-                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2381.7921005431476!2d-6.2607130234695285!3d53.34697767228952!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48670e851ffc2b57%3A0x2f432b8b82a1a110!2sJ.R.%20MAHON&#39;S!5e0!3m2!1spt-BR!2sie!4v1708702357324!5m2!1spt-BR!2sie"
-                        width="250" height="190" style="border:0;" allowfullscreen="" loading="lazy"
-                        referrerpolicy="no-referrer-when-downgrade"></iframe>
-                </div>
-                <div class="time ">
-                    <h3>Hours</h3>
-                    <ul>
-                        <li>Monday - Wednesday</li>
-                        <li>12am - 3om</li>
-                        <li>Friday - Saturday</li>
-                        <li>10am-3pm</li>
-                    </ul>
-                </div>
-                <div class="video-container">
-                    <video src="./assets/video/celeste-video.mp4" controls autoplay muted
-                        aria-describedby="description">
-                        <p id="description">Apresentation of Celeste works with candles, cards and reading hands.</p>
-                    </video>
+            </div>
+            <div class="iframe-container">
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2381.7921005431476!2d-6.2607130234695285!3d53.34697767228952!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48670e851ffc2b57%3A0x2f432b8b82a1a110!2sJ.R.%20MAHON&#39;S!5e0!3m2!1spt-BR!2sie!4v1708702357324!5m2!1spt-BR!2sie"
+                width="250" height="190" style="border:0;" allowfullscreen="" loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
+            <div class="time ">
+                <h3>Hours</h3>
+                <ul>
+                    <li>Monday - Wednesday</li>
+                    <li>12am - 3om</li>
+                    <li>Friday - Saturday</li>
+                    <li>10am-3pm</li>
+                </ul>
+            </div>
+            <div class="video-container">
+                <video src="./assets/video/celeste-video.mp4"  controls autoplay muted
+                    aria-describedby="description">
+                    <p id="description">Apresentation of Celeste works with candles, cards and reading hands.</p>
+                </video>
+
+            </div>
+        </div>
+    </section>
     </main>
+    
     <!--Footer with contacts available-->
     <footer>
         <ul id="footer-social-media-contact">
@@ -253,10 +261,9 @@
         </ul>
         <div class="footer-social-media-contact__email">
             <span>Email:</span>
-            <a href="" rel="noopener">celestial@gmail.com</a>
-            <span><i class="fa-regular fa-copyright"></i>Copyright Miriam Mccay
-                2024</span>
+            <a href="">celestial@gmail.com</a>
         </div>
+        <p><i class="fa-regular fa-copyright"></i>Copyright Miriam Mccay 2024</p>
     </footer>
     <!--Font Awesome kit-->
     <script src="https://kit.fontawesome.com/594d12a65e.js" crossorigin="anonymous"></script>
