--- a/member.html
+++ b/member.html
@@ -36,6 +36,17 @@
         </nav>
     </header>
     <main>
+        <!--Member text introduction-->
+
+        <!--Form member-->
+        <h1 class="heading-container">Join me to the CELESTial World</h1>
+        <section id="form">
+            <div class="text-paraghp member-text">
+                <p>Interested? Apply here for my services!</p>
+                <p>Stay informed and join the celestial community.</p>
+                <br>
+                <p>I'll be in touch soon!</p>
+            </div>
     </main>
     <!--Footer with contacts available-->
     <footer>
