Fix the page active class applied to member.html page

--- a/member.html
+++ b/member.html
@@ -29,9 +29,9 @@
                 class="fa-solid fa-bars"></i></label>
         <nav>
             <ul id="menu">
-                <li><a href="index.html" class="page-active">Home</a></li>
+                <li><a href="index.html" >Home</a></li>
                 <li><a href="services.html">Services</a></li>
-                <li><a href="member.html">Member</a></li>
+                <li><a href="member.html" class="page-active">Member</a></li>
             </ul>
         </nav>
     </header>
